Modif du service de synchro pour désactiver des items en cas de modifiction de comportement sur le serveur esclave. Clean des sources avec Netbeans refactor (a poursuivre)